<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_my_car"
            android:title="@string/menu_my_cars" />
        <item
            android:id="@+id/nav_service_history"
            android:icon="@drawable/ic_service_history"
            android:title="@string/menu_service_history" />
        <item
            android:id="@+id/nav_sell_cars"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_sell_cars" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/menu_about_us" />
    </group>
</menu>