<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragement"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"

            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/menu_profile"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:background="#7DC9EC"
            android:gravity="center_vertical"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:background="#7DC9EC"
            android:gravity="center_vertical"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:background="#7DC9EC"
            android:gravity="center_vertical"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/mobile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSetMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="50sp"
            android:layout_marginRight="50sp"
            android:layout_weight="1"
            android:text="@string/edit_profile" />
    </LinearLayout>
</ScrollView>